--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cat-cli",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "a good scaffold",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/liumin1128/cat-cli#readme",
   "dependencies": {
+    "commander": "^2.11.0",
     "fs-extra": "^4.0.0"
   }
 }
