--- a/react/package.json
+++ b/react/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --config webpack.dev.config.js --hot --host 0.0.0.0 --inline --progress",
-    "dev": "webpack-dev-server --config webpack.dev.config.js --hot --host 0.0.0.0 --inline --progress",
+    "start": "webpack-dev-server --config webpack.dev.config.js --hot --inline --progress",
+    "dev": "webpack-dev-server --config webpack.dev.config.js --hot --inline --progress",
     "build": "rimraf dist && webpack -p --colors --profile --display-error-details --display-modules --progress",
     "dll": "rimraf dll && webpack --config webpack.dll.config.js -p"
   },
@@ -20,49 +20,49 @@
   ],
   "author": "liumin",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/liumin1128/react-cli/issues"
+  "dependencies": {
+    "fastclick": "^1.0.6",
+    "preact": "^8.2.4",
+    "preact-compat": "^3.17.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-persist": "^4.9.1",
+    "redux-saga": "^0.15.6"
   },
-  "homepage": "https://github.com/liumin1128/react-cli#readme",
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
-    "babel-core": "^6.25.0",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-import": "^1.2.1",
-    "babel-plugin-transform-remove-console": "^6.8.4",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-import": "^1.4.0",
+    "babel-plugin-transform-remove-console": "^6.8.5",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-loader": "^1.8.0",
-    "eslint-plugin-import": "^2.6.1",
+    "css-loader": "^0.28.5",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb": "^15.1.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.1.0",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "eslint-plugin-react": "^7.3.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.29.0",
+    "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.2",
-    "less-loader": "^4.0.4",
+    "less-loader": "^4.0.5",
     "postcss-loader": "^2.0.6",
     "react-hot-loader": "^3.0.0-beta.7",
-    "redux-devtools": "^3.4.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.5.0"
-  },
-  "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
-    "react-router": "^4.1.1",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.7.1",
-    "redux-saga": "^0.15.4"
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   }
 }
